     so that generative methods work a bit better
     off of cloned (this is almost a non-use case though).
     In particular this allows with_only_columns()
     to behave more consistently.   Added additional
     documentation to with_only_columns() to clarify
     expected behavior, which changed as a result
     of [ticket:2261].  [ticket:2319]

- schema
  - [feature] Added new support for remote "schemas":
    - MetaData() accepts "schema" and "quote_schema"
      arguments, which will be applied to the same-named
      arguments of a Table
      or Sequence which leaves these at their default
      of ``None``.
    - Sequence accepts "quote_schema" argument
    - tometadata() for Table will use the "schema"
      of the incoming MetaData for the new Table
      if the schema argument is explicitly "None"
    - Added CreateSchema and DropSchema DDL
      constructs - these accept just the string
      name of a schema and a "quote" flag.
    - When using default "schema" with MetaData,
      ForeignKey will also assume the "default" schema
      when locating remote table.  This allows the "schema"
      argument on MetaData to be applied to any 
      set of Table objects that otherwise don't have 
      a "schema".
    - a "has_schema" method has been implemented
      on dialect, but only works on Postgresql so far.
    Courtesy Manlio Perillo, [ticket:1679]

  - [feature] The "extend_existing" flag on Table
    now allows for the reflection process to take
    effect for a Table object that's already been 
    defined; when autoload=True and extend_existing=True
    are both set, the full set of columns will be
    reflected from the Table which will then 
    *overwrite* those columns already present,
    rather than no activity occurring.  Columns that
    are present directly in the autoload run
    will be used as always, however.
    [ticket:1410]

  - [bug] Fixed bug whereby TypeDecorator would
    return a stale value for _type_affinity, when